--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,15 +1,18 @@
 !!!Strict
-%html
+%html{:xmlns => 'http://www.w3.org/1999/xhtml', :lang => 'en'}
   %head
     %title= [Settings.app_name, yield(:title)].compact.join(' - ')
+    %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
     = stylesheet_link_tag 'screen'
     = javascript_include_tag 'jquery-1.3.2.min.js'
     = javascript_include_tag 'application'
     
-  %body
+  %body{:lang => 'en'}
     #page
       #header
         %h1= Settings.app_name
+        #main-nav
+          = render :partial => '/home/equation'
       
       #content
         %h2= yield :title
