--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,57 +1,60 @@
 body {
-  background-color: #636c95;
+  background-color: #000;
   font-family: Verdana, Arial, sans-serif;
   font-size: 10pt;
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 #page {
-  width: 960px;
+  position: relative;
   margin: 0 auto;
-}
+  width: 960px; }
 
 #header {
+  background-color: #000;
   padding: 4px 10px;
+  left: 0;
   margin-top: 40px;
-  background-color: #41345f;  
-}
+  position: fixed;
+  top: 0; }
+  #header a {
+    color: #fff; }
   #header h1 {
     color: #fff;
     margin: 0;
-    padding: 0;
-  }
+    padding: 0; }
+  #header #main-nav dl {
+    margin: 0;
+    font-family: Georgia, Serif;
+    font-size: 120%; }
+    #header #main-nav dl dt, #header #main-nav dl dd {
+      display: inline; }
+    #header #main-nav dl a.drake {
+      text-decoration: none; }
+      #header #main-nav dl a.drake span {
+        margin-left: 1em; }
 
 #footer {
   text-align: center;
   font-size: 80%;
-  color: #41345f;
-}
+  color: #41345f; }
 
 #content {
-  padding: 10px;
-  background-color: #fff;
-  border: 2px solid #41345f;
-}
+  color: #fff;
+  padding: 10px; }
   #content h2 {
     font-weight: normal;
-    margin: 0 0 1em 0;
-  }
-
+    margin: 0 0 1em 0; }
 
 dl.form dd {
-  margin-left: 0;
-}
+  margin-left: 0; }
 
 label[for]:hover {
-  text-decoration: underline;
-}
+  text-decoration: underline; }
 
 input#openid_url {
-	/* embeds the openid image in the text field */
-	background: url(/images/openid.gif) no-repeat;
-	background-color: #fff;
-	background-position: 0 50%;
-	color: #000;
-	padding-left: 18px;
-}
+  background: url(/images/openid.gif) no-repeat;
+  background-color: #fff;
+  background-position: 0 50%;
+  color: #000;
+  padding-left: 18px; }
