--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -7,15 +7,15 @@ body
 
 
 #page
-  position: relative
-  margin: 0 auto
-  width: 960px
+  /position: relative
+  /margin: 0 auto
+  /width: 960px
 
 #header
   background-color: #000
   padding: 4px 10px
   left: 0
-  margin-top: 40px
+  /margin-top: 40px
   position: fixed
   top: 0
     
@@ -53,7 +53,8 @@ body
 
 #content
   color: #fff
-  padding: 10px
+  margin: 5em auto 0
+  padding: 1em
   /background-color: #fff
   /border: 2px solid #41345f
 
