--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -5,16 +5,11 @@ body {
   padding: 0;
   margin: 0; }
 
-#page {
-  position: relative;
-  margin: 0 auto;
-  width: 960px; }
 
 #header {
   background-color: #000;
   padding: 4px 10px;
   left: 0;
-  margin-top: 40px;
   position: fixed;
   top: 0; }
   #header a {
@@ -41,7 +36,8 @@ body {
 
 #content {
   color: #fff;
-  padding: 10px; }
+  margin: 5em auto 0;
+  padding: 1em; }
   #content h2 {
     font-weight: normal;
     margin: 0 0 1em 0; }
