--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,11 @@
     %title= [Settings.app_name, yield(:title)].compact.join(' - ')
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
     = stylesheet_link_tag 'screen'
+    = stylesheet_link_tag 'redmond/jquery-ui-1.7.1.custom'
+    = stylesheet_link_tag 'ui.slider.extras'
     = javascript_include_tag 'jquery-1.3.2.min.js'
+    = javascript_include_tag 'jquery-ui-1.7.1.custom.min.js'
+    = javascript_include_tag 'selectToUISlider.jQuery.js'
     = javascript_include_tag 'application'
     
   %body{:lang => 'en'}
