--- a/app/views/rational_options/index.html.haml
+++ b/app/views/rational_options/index.html.haml
@@ -1,6 +1,6 @@
-%h4 Rational Options
+- title 'Rationals'
 
-= link_to 'Add a rational option', new_rational_option_path
+= link_to 'Add a rational', new_rational_option_path
 
 %ol
   - for rational_option in current_objects
