hide labels on sliders, for now..

--- a/app/views/surveys/new.html.haml
+++ b/app/views/surveys/new.html.haml
@@ -14,5 +14,5 @@
 :javascript
   $(function(){
     $('select').each(function(i,o){
-      $(o).selectToUISlider()});
+      $(o).selectToUISlider({labels: 0})});
   });
