Form style cleanup

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -77,3 +77,14 @@ input#openid_url
   background-position: 0 50%
   color: #000
   padding-left: 18px
+  
+  
+
+fieldset
+  :border-width 0
+  :padding 0
+  ol
+    :list-style-type none
+    :padding-left 0
+    label
+      :display block
