--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,30 +1,10 @@
-- title 'Congratulations!'
+- title 'Crowdsourcing the Drake Equation'
 
 :textile
-  et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a
-  sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis 
-  doloribus asperiores repellat.
+  In 1960 Dr. Frank Drake created a formula to estimate the number of intelligent civilizations in our galaxy. Rather than giving a definitive answer, the Drake Equation provides a framework for exploring what may be the most important scientific question of the 21st century.
 
-  Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus 
-  id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. 
-  Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut 
-  
-  et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a
-  sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis 
-  doloribus asperiores repellat.
-  
-  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium 
-  
-  voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati 
-  
-  cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, 
-  
-  id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. 
-  
-  Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus 
-  id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. 
-  Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut 
-  
-  et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a
-  sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis 
-  doloribus asperiores repellat.
+  This application will teach enough astronomy, geology, and biology to help people understand each parameter of the Drake Equation. They can enter their estimates for each value and calculate their own number of civilizations, then compare their ideas with those of other participants, contextualized by different demographic data.
+
+  Enhanced features will include teacher functionality to compare answers among students in a classroom, Twitter integration to share your estimate with your tweeps, and a blog to keep up with late-breaking news in the field.
+
+= image_tag 'iya_logo.jpg', :width => 300, :align => :center
