fixed YAH treatment, merged compiled sass references

--- a/app/views/home/_equation.html.haml
+++ b/app/views/home/_equation.html.haml
@@ -1,17 +1,17 @@
 %dl.equation
   %dt
-    - drake_link(drake_number, 'number', 'the number of civilizations in our galaxy in which communication is possible') 
+    - drake_link(drake_number, 'n', 'the number of civilizations in our galaxy in which communication is possible') 
   %dd
-    - drake_link(drake_stars, 'stars', 'the average rate of star formation per year in our galaxy')
+    - drake_link(drake_stars, 'r_star', 'the average rate of star formation per year in our galaxy')
   %dd
-    - drake_link(drake_planets, 'planets', 'the fraction of those stars that have planets')    
+    - drake_link(drake_planets, 'fp', 'the fraction of those stars that have planets')    
   %dd
-    - drake_link(drake_earthlike, 'earthlike', 'the average number of planets that can potentially support life per star that has planets')
+    - drake_link(drake_earthlike, 'fe', 'the average number of planets that can potentially support life per star that has planets')
   %dd
-    - drake_link(drake_life, 'life', 'the fraction of the above that actually go on to develop life at some point')
+    - drake_link(drake_life, 'fl', 'the fraction of the above that actually go on to develop life at some point')
   %dd
-    - drake_link(drake_intelligence, 'intelligence', 'the fraction of the above that actually go on to develop intelligent life')
+    - drake_link(drake_intelligence, 'fi', 'the fraction of the above that actually go on to develop intelligent life')
   %dd
-    - drake_link(drake_communicate, 'communicate', 'the fraction of civilizations that develop a technology that releases detectable signs of their existence into space')
+    - drake_link(drake_communicate, 'fc', 'the fraction of civilizations that develop a technology that releases detectable signs of their existence into space')
   %dd
-    - drake_link(drake_duration, 'duration', 'the length of time such civilizations release detectable signals into space')
+    - drake_link(drake_duration, 'l', 'the length of time such civilizations release detectable signals into space')
