--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,11 @@
   %head
     %title= [Settings.app_name, yield(:title)].compact.join(' - ')
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
-    = stylesheet_link_tag 'compiled/main', 'compiled/screen'
+    = stylesheet_link_tag 'compiled/main.css', 'compiled/screen.css', :media => 'screen, projection'
+    = stylesheet_link_tag 'compiled/partials/_base.css'
+    = stylesheet_link_tag 'compiled/print.css', :media => 'print'
+    /[if lt IE 8]
+      = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
     = stylesheet_link_tag 'redmond/jquery-ui-1.7.1.custom'
     = stylesheet_link_tag 'ui.slider.extras'
     = javascript_include_tag 'jquery-1.3.2.min.js'
@@ -13,8 +17,13 @@
     
   %body{:lang => 'en'}
     #page
-      %h1
-        %a{:href => '/'}= Settings.app_name
+      .banner
+        %h1
+          %a{:href => '/'}= Settings.app_name
+        %blockquote
+          %p
+            %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
+              The Universe: Yours to discover. International Year of Astronomy 2009 
       #header
         #main-nav
           = render :partial => '/home/equation'
