--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -8,9 +8,9 @@
 =outline(!color=red)
   * html &
     border = 1px dotted !color
-  html[lang=en] &
+  html[lang~=en] &
     border = 1px dotted !color
-  html[lang=EN] &
+  html[lang~=EN] &
     outline = 1px dotted !color
 
 =border_radius(!radius)
@@ -35,21 +35,41 @@ body
   /margin: 0 auto
   /width: 960px
 
-h1
-  background-color: #000
-  /+outline(yellow)
-  a
+.banner
+  h1
+    background-color: #000
+    position: relative
+    /+outline(yellow)
+    a
+      background:
+        color: #000
+        image: url(/images/sprite.png)
+        position: 0 0
+        repeat: no-repeat
+      color: #fff
+      display: block
+      height: 142px
+      text-indent: -800em
+      +width_constraints
+
+  blockquote
     background:
-      color: #000
       image: url(/images/sprite.png)
       position: 0 0
       repeat: no-repeat
-    color: #fff
-    display: block
-    height: 142px
-    text-indent: -800em
-    +width_constraints
-
+    position: absolute
+    right: -108px
+    top: 0
+    p
+      a
+        background:
+          image: url(/images/sprite.png)
+          position: -905px -158px
+          repeat: no-repeat
+        display: block
+        height: 204px
+        text-indent: -800em
+        width: 108px
 
 
 #header
@@ -71,9 +91,16 @@ h1
           family: Georgia, Serif
           size: 20px
           style: italic
+        margin-bottom: 1em
         
         dt, dd
           display: inline-block
+          * html &
+            display: inline
+          html[lang~=en] &
+            display: inline
+          html[lang~=EN] &
+            display: inline-block
           
         a
           &.drake
@@ -123,9 +150,6 @@ h1
   color: #fff
   font-family: 'Mank Sans', Georgia, 'Times New Roman', Serif
   margin: 5em auto 0
-  /padding: 1em
-  /background-color: #fff
-  outline: 1px dotted #fff
   +width_constraints
   -moz-column-gap: 1em
   -moz-column-width: 380px
