--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
           = render :partial => '/home/equation'
       
       #content
-        %h2= yield :title
+        %h2= yield :heading
     
         - if flash.any?
           #flash
