--- a/app/views/home/_equation.html.haml
+++ b/app/views/home/_equation.html.haml
@@ -9,7 +9,7 @@
     - drake_link(drake_planets, 'fp', 'the fraction of those stars that have planets')    
     - drake_operator
   %dd
-    - drake_link(drake_earthlike, 'fe', 'the average number of planets that can potentially support life per star that has planets')
+    - drake_link(drake_earthlike, 'ne', 'the average number of planets that can potentially support life per star that has planets')
     - drake_operator
   %dd
     - drake_link(drake_life, 'fl', 'the fraction of the above that actually go on to develop life at some point')
