--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
-    = stylesheet_link_tag 'redmond/jquery-ui-1.7.1.custom'
+    = stylesheet_link_tag 'qfl/jquery-ui-1.7.2.custom.css'
     = stylesheet_link_tag 'ui.slider.extras'
     = javascript_include_tag 'jquery-1.3.2.min.js'
     = javascript_include_tag 'jquery-ui-1.7.1.custom.min.js'
