--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     = javascript_include_tag 'jquery-ui-1.7.1.custom.min.js'
     = javascript_include_tag 'selectToUISlider.jQuery.js'
     = javascript_include_tag 'application'
+    = partial '/shared/disqus_variables'
     
   %body{:lang => 'en'}
     #page
