--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,7 @@
 - title 'Crowdsourcing the Drake Equation'
 
+= image_tag 'iya_logo.jpg', :width => 300, :align => :right
+
 :textile
   In 1960 Dr. Frank Drake created a formula to estimate the number of intelligent civilizations in our galaxy. Rather than giving a definitive answer, the Drake Equation provides a framework for exploring what may be the most important scientific question of the 21st century.
 
@@ -7,4 +9,3 @@
 
   Enhanced features will include teacher functionality to compare answers among students in a classroom, Twitter integration to share your estimate with your tweeps, and a blog to keep up with late-breaking news in the field.
 
-= image_tag 'iya_logo.jpg', :width => 300, :align => :center
