--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,14 +24,15 @@
          
       #header
         #main-nav
-          %blockquote
-            %p
-              %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
-                The Universe: Yours to discover. International Year of Astronomy 2009
-          
           = render :partial => '/home/equation'
       
       #content
+        
+        %blockquote.iya
+          %p
+            %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
+              The Universe: Yours to discover. International Year of Astronomy 2009
+        
         %h2= yield :heading
     
         - if flash.any?
