--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -23,7 +23,10 @@
   src: url(/fonts/MankSans.ttf)
 
 body
-  background-color: #000
+  background:
+    color: #4851a6
+    image: url(/images/gradient-page.png)
+    repeat: repeat-x
   font-family: Verdana, Arial, sans-serif
   font-size: 10pt
   padding: 0
@@ -32,7 +35,7 @@ body
 
 #page
   background:
-    color: #000
+    color: transparent
     image: url(/images/banner.png)
     position: 100% 0
     repeat: no-repeat
