--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -126,6 +126,7 @@ body
                 min-height: 50px
                 min-width: 30px
                 padding: 0 .5em
+                text-shadow: 2px 2px 6px #ccc
               
             &:hover
               span.function
@@ -133,6 +134,7 @@ body
                 border = 1px solid !site_purple
                 color: #000
                 +border_radius(!main_nav_radius)
+                text-shadow: 2px 2px 6px #333
             &.yah
               span.function
                 border:
@@ -184,6 +186,13 @@ blockquote.signage
 
   p
     margin: 0 0 1em 0
+    
+  a
+    color: #a8d0e0
+    font-weight: bold
+    text-decoration: none
+    &:hover
+      text-decoration: underline
 
 dl.form dd
   margin-left: 0
