--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,6 +33,10 @@
             %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
               The Universe: Yours to discover. International Year of Astronomy 2009
           
+          %p
+            %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
+            
+              Vote for this site at RailsRumble2009
         
         %h2= yield :heading
     
