rumble badge can be deleted

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,14 +29,14 @@
       #content
         
         %blockquote.signage
-          %p
+          %p.iya
             %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
               The Universe: Yours to discover. International Year of Astronomy 2009
           
-          %p
-            %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
-            
-              Vote for this site at RailsRumble2009
+          %p.rumble
+            %a{:href => 'http://blog.railsrumble.com/', :target => "_blank"}
+              %img{:src => image_path('rr09_badge_250.png')}
+              Vote for this site at Rails Rumble 2009
         
         %h2= yield :heading
     
