--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -154,15 +154,25 @@ blockquote.signage
   position: relative
   top: -150px
   p
-    a
-      background:
-        image: url(/images/iya_logo_small.png)
-        position: 0 0
-        repeat: no-repeat
-      display: block
-      height: 204px
-      text-indent: -800em
+    &.iya
+      a
+        background:
+          image: url(/images/iya_logo_small.png)
+          position: 0 0
+          repeat: no-repeat
+        display: block
+        height: 204px
+        text-indent: -800em
+        width: 108px
+    &.rumble
+      font-size: 12px
+      text-align: center
       width: 108px
+      img
+        display: block
+        height: 108px
+        margin-bottom: .5em
+        width: 108px
 
 
 #content
