More educational content and some style tweaking.

--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -1,3 +1,22 @@
+%style{ :type => "text/css" }
+  :sass
+    dt.bullet
+      margin-left: 1em
+      font-weight: bold
+      display: list-item
+      list-style-type: square
+      cursor: pointer
+    dd.detail
+      display: none
+      ul
+        margin-left: 1em
+:javascript
+  $(function(){
+    $('dt.bullet').click(function(e){
+      $(this).next().slideToggle();
+      })
+  })
+
 = partial @parameter
 
 = partial 'parameter_form', :parameter => @parameter
