--- a/app/views/shared/_disqus_variables.html.haml
+++ b/app/views/shared/_disqus_variables.html.haml
@@ -4,5 +4,6 @@
   // uncomment this to cause discus to load css into the iframe for its form
   // see http://wiki.disqus.net/CustomCSS
   //
-  // var disqus_iframe_css = #{[Settings.base_url, 'compiled', 'disqus-form.css'].join('/').to_json};
+  var disqus_iframe_css = #{[Settings.base_url, 'stylesheets', 'compiled', 'disqus-form.css'].join('/').to_json};
+  //var disqus_iframe_css = 'http://www.weiskotten.com/disqus-form.css';
   var disqus_developer = 1;
