Moved bullet/detail sass to main.sass

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -278,4 +278,10 @@ fieldset
     label
       :display block
       
-    
+dt.bullet
+  margin-left: 1em
+  font-weight: bold
+  display: list-item
+  list-style-type: square
+dd.detail
+  display: none
